--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "gatsby": "^2.32.3",
     "gatsby-plugin-drift": "^1.0.0",
+    "gatsby-plugin-google-analytics": "^2.11.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
   },
