--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gatsby": "^2.32.3",
     "gatsby-plugin-drift": "^1.0.0",
     "gatsby-plugin-google-analytics": "^2.11.0",
+    "gatsby-plugin-purgecss": "^5.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
   },
