--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "gatsby": "^2.32.3",
+    "gatsby-plugin-dark-mode": "^1.1.2",
     "gatsby-plugin-drift": "^1.0.0",
     "gatsby-plugin-google-analytics": "^2.11.0",
     "gatsby-plugin-purgecss": "^5.0.0",
