--- a/package.json
+++ b/package.json
@@ -24,7 +24,10 @@
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
-    "@tailwindcss/typography": "^0.5.0",
+    "@types/node": "^17.0.8",
+    "@types/react": "^17.0.38",
+    "@types/react-dom": "^17.0.11",
+    "@types/tailwindcss": "^3.0.2",
     "autoprefixer": "^10.4.0",
     "gatsby-plugin-postcss": "^5.4.0",
     "postcss": "^8.4.5",
