--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,9 +4,12 @@
   },
   "css.lint.unknownAtRules": "ignore",
   "cSpell.words": [
+    "commitlint",
     "kpuyms",
     "Mandrawadkar",
     "Parens",
+    "precommit",
+    "prettierrc",
     "purgecss",
     "Satoshi",
     "semibold",
