--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
     "start": "gatsby develop",
     "build": "gatsby build",
     "serve": "gatsby serve",
-    "clean": "gatsby clean"
+    "clean": "gatsby clean",
+    "prepare": "husky install",
+    "prettier-format": "prettier --config .prettierrc 'src/**/*.ts src/**/*.tsx src/**/*.css src/**/*.js' --write",
+    "lint": "eslint . --ext .ts --ext .tsx --ext .js --ext .jsx --fix",
+    "pre-commit": "lint-staged"
   },
   "dependencies": {
     "gatsby": "^4.4.0",
@@ -24,13 +28,32 @@
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
+    "@commitlint/cli": "^16.0.2",
+    "@commitlint/config-conventional": "^16.0.0",
     "@types/node": "^17.0.8",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
     "@types/tailwindcss": "^3.0.2",
+    "@typescript-eslint/eslint-plugin": "^5.9.1",
+    "@typescript-eslint/parser": "^5.9.1",
     "autoprefixer": "^10.4.0",
+    "commitizen": "^4.2.4",
+    "cz-conventional-changelog": "^3.3.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-no-loops": "^0.3.0",
+    "eslint-plugin-react": "^7.28.0",
     "gatsby-plugin-postcss": "^5.4.0",
+    "git-precommit-checks": "^3.0.7",
+    "husky": "^7.0.0",
+    "lint-staged": "^12.1.7",
     "postcss": "^8.4.5",
-    "tailwindcss": "^3.0.5"
+    "tailwindcss": "^3.0.5",
+    "typescript": "^4.5.4",
+    "validate-branch-name": "^1.2.1"
+  },
+  "config": {
+    "commitizen": {
+      "path": "cz-conventional-changelog"
+    }
   }
 }
