Feat/team page/header (#11)
* config: added new color pallete

* adds satoshi fonts and typography css

* adds font css

* adds font css

* adds heading css

* adds typography in tailwind config

* addressed comment

* adds header

* delete yarn error file

* feat: address comments

* feat: address comments

* feat: address comments

* feat: remove duplicate fonts

* update tailwind config

Co-authored-by: Rizwan Memon <rizwan2000.rm@gmail.com>
Co-authored-by: Saigita Guruju <saigita@theprocedure.in>

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "pre-commit": "lint-staged"
   },
   "dependencies": {
+    "@headlessui/react": "^1.4.2",
     "gatsby": "^4.4.0",
     "gatsby-plugin-dark-mode": "^1.1.2",
     "gatsby-plugin-drift": "^1.0.0",
