Our Team Section PR (#18)
* Typography Setup Complete

* Typography Minor Changes

* Readme File Changes

* Minor Readme Changes

* Added Inter to the font family

* Added Colors, Default Base Styles and type dev modules

* feat(project): setup Husky and Githooks for Pre-commit, Push and Commitlint and Commitizen

Husky Setup

* fix(project): changed commitizen config to suppor git commit command

Commitizen `git commit` configuration, now you can use the commitizen step by step commit for your
commits using the default command

* Changed Line Height Name

* feat(teams): our Team Section Implementation 30%

Added Responsive Header and Body Text

* feat(our-team-section): our Team Section Complete

- Added Components Required for Team Section (Display Text, Polaroid, Scroller)
- Designed Team Section Container
- Implemented Responsive Styles
- Added Transitions to the Polaroid Cards

* fix(components): pR comments fixes

IsEven Util Function Condition Changes
Ternary Operation for checking isEven in Polaroid List
Polaroid List Created as new Component

* fix(compoenets): added rest props to the components and pr comments resolved

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,11 +7,13 @@
     "commitlint",
     "kpuyms",
     "Mandrawadkar",
+    "organised",
     "Parens",
     "precommit",
     "prettierrc",
     "purgecss",
     "Satoshi",
+    "Scroller",
     "semibold",
     "tailwindcss",
     "Ulhas"
