refactor(project): refactor Code for All Components to follow code convention
Used FC<Props> as applying props to Functional Component

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
   "css.lint.unknownAtRules": "ignore",
   "cSpell.words": [
     "commitlint",
+    "headlessui",
     "kpuyms",
     "Mandrawadkar",
     "organised",
