--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "gatsby-plugin-drift": "^1.0.0",
     "gatsby-plugin-google-analytics": "^4.4.0",
     "gatsby-plugin-purgecss": "^6.1.0",
+    "gatsby-plugin-react-svg": "^3.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
