--- a/package.json
+++ b/package.json
@@ -24,8 +24,12 @@
     "gatsby-plugin-dark-mode": "^1.1.2",
     "gatsby-plugin-drift": "^1.0.0",
     "gatsby-plugin-google-analytics": "^4.4.0",
+    "gatsby-plugin-image": "^2.5.2",
     "gatsby-plugin-purgecss": "^6.1.0",
     "gatsby-plugin-react-svg": "^3.1.0",
+    "gatsby-plugin-sharp": "^4.5.2",
+    "gatsby-source-filesystem": "^4.5.2",
+    "gatsby-transformer-sharp": "^4.5.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
@@ -49,6 +53,7 @@
     "husky": "^7.0.0",
     "lint-staged": "^12.1.7",
     "postcss": "^8.4.5",
+    "prettier": "2.5.1",
     "tailwindcss": "^3.0.5",
     "typescript": "^4.5.4",
     "validate-branch-name": "^1.2.1"
