perf(feature-section): feature Section Complete

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
   },
   "css.lint.unknownAtRules": "ignore",
   "cSpell.words": [
+    "Bookclub",
     "commitlint",
     "headlessui",
     "kpuyms",
