--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "gatsby-source-filesystem": "^4.5.2",
     "gatsby-transformer-sharp": "^4.5.0",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-step-progress-bar": "^1.0.3"
   },
   "devDependencies": {
     "@commitlint/cli": "^16.0.2",
