--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "gatsby-transformer-sharp": "^4.5.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-step-progress-bar": "^1.0.3"
+    "react-step-progress-bar": "^1.0.3",
+    "react-tsparticles": "^1.41.2"
   },
   "devDependencies": {
     "@commitlint/cli": "^16.0.2",
